fix: Fix issue with user not having role attached
Fixed the issue that arises when getName() is called on a user with
no role assigned.

Signed-off-by: Gabriel Rockson <gabriel.rockson@amalitech.com>