@@ -6,7 +6,9 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 public class UserPrincipal implements UserDetails {
     private final User user;
@@ -17,7 +19,9 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getRole().getName()));
+        return Optional.ofNullable(user.getRole())
+                .map(role -> List.of(new SimpleGrantedAuthority(user.getRole().getName())))
+                .orElse(Collections.emptyList());
     }
 
     @Override
